kube_task/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-namespace
spec:
  selector:
    app: web-app
  ports:
    - nodePort: 32044
      protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
