kube_task/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: my-namespace
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
